2000-01-23  Per Bothner  <per@bothner.com>

	* misc-test.scm:  Added tests for call-with-values and values.

2000-01-22  Per Bothner  <per@bothner.com>

	* testing.scm (setion):  Return implied #!void rather than #t.

1999-12-11  Per Bothner  <per@bothner.com>

	* misc-test.scm:  New test for fluid-let, from bug reported by
	Walter C. Pelissero <wcp@lpds.sublink.org> 1999-12-10.

1999-11-28  Per Bothner  <per@bothner.com>

	* misc-test.scm:  Various tests for variable lookup, inlining,
	recursion and similar nasty stuff. Based on bug
	reports from Walter C. Pelissero <wcp@lpds.sublink.org>.

1999-11-18  Per Bothner  <per@bothner.com>

	* testing.scm:  Remove save-+ kludge.  No longer needed, now that +
	is "inlined" (actually just resolved by the compiler).

1999-11-16  Per Bothner  <per@bothner.com>

	* misc-test.scm:  Added test for "too many args?" bug
	reported by Walter C. Pelissero" <wcp@pop.systemy.it>.

1999-11-15  Per Bothner  <per@bothner.com>

	* misc-test.scm:  Add some tests for SRFI-6 string-port procedures.
	(sql-rsmd-all):  Verification regression test.
	* obj-test.scm:  Added some reflection tests (invoke, slot-set!, etc).
 	(force-eval, force-compile):  Helper procedures.

1999-09-08  Per Bothner  <per@bothner.com>

	* mac-test.scm:  More test, mostly let-syntax and friends.
	* misc-test.scm:  Add a test for internal define-alias.
	* test.scm:  Comment our extra (newline).

1999-08-17  Per Bothner  <per@bothner.com>

	* obj-test.scm:  Another object regression test.

1999-07-19  Per Bothner  <per@bothner.com>

	* Makefile.am, Makefile.in (SOURCES):  Add formatst.scm.

1999-07-15  Per Bothner  <per@bothner.com>

	* misc-test.scm:  Added 3 new (originally failing) test-cases reported
 	by "Otto, Marcus, Mathe/Informatik" <Otto_Marcus@ph-ludwigsburg.de>.
	* Makefile.am, Makefile.in (check2):  Remove duplication. 
	
1999-07-11  Per Bothner  <per@bothner.com>

	* formatst.scm:  Set fail-expected 4 places.  Some other fixes.