@@ -1,0 +1,20 @@
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<html>
+  <head><title>Scribble applet</title></head>
+
+  <body>
+    <h1>Scribble applet</h1>
+You can scribble here:
+<br>
+<applet code="scribble.class" archive="scribble.jar" width=200 height=200>
+Sorry, Java is needed.
+</applet>
+
+    <hr>
+    <address><a href="mailto:per@bothner.com">Per Bothner</a></address>
+<!-- Created: Fri Feb  4 15:49:36 PST 2000 -->
+<!-- hhmts start -->
+Last modified: Sat Feb 12 21:13:35 PST 2000
+<!-- hhmts end -->
+  </body>
+</html>
